# modern_python_template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  sample_data.json  setup.sh
.github/workflows/: ci.yml
docs/: README.md
src/modern_python_template/: __init__.py  __main__.py  cli.py  core.py
tests/: conftest.py  test_cli.py  test_core.py
